update design login

--- a/public/assets/login-template/css/main.css
+++ b/public/assets/login-template/css/main.css
@@ -58,7 +58,7 @@ a:focus {
 
 a:hover {
 	text-decoration: none;
-  color: #d2ab67;
+  color: #e45000;
 }
 
 /*---------------------------------------------*/
@@ -169,10 +169,6 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: -webkit-linear-gradient(-135deg, #161616, #0e1116);
-  background: -o-linear-gradient(-135deg, #161616, #0e1116);
-  background: -moz-linear-gradient(-135deg, #161616, #0e1116);
-  background: linear-gradient(-135deg, #161616, #0e1116);
 }
 
 .wrap-login100 {
@@ -187,31 +183,52 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 70px 130px 33px 95px;
+  padding: 50px 130px 33px 95px;
 }
 
+.social-media img{
+  width: 75px;
+  padding: 15px;
+}
+
+.social-media img:hover{
+  cursor: pointer;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.404));
+}
+.social-media img:active{
+  cursor: pointer;
+  opacity: 70%;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.246));
+}
 /*------------------------------------------------------------------
 [  ]*/
 .login100-pic {
-  width: 316px;
+  width: 340px;
 }
 
 .login100-pic img {
   max-width: 100%;
-  padding-top: 10%;
+  text-align: center;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-right: 5%;
 }
 
 
 /*------------------------------------------------------------------
 [  ]*/
 .login100-form {
-  width: 290px;
+  width: 380px;
 }
 
 .login100-form-title {
   font-family: Poppins-Bold;
   font-size: 24px;
-  color: #dbdbdb;
+  color: #1d1d1d;
   line-height: 1.2;
   text-align: center;
 
@@ -256,7 +273,7 @@ iframe {
   width: 100%;
   height: 100%;
   box-shadow: 0px 0px 0px 0px;
-  color: #d2ab67;
+  color: #e45000;
 }
 
 .input100:focus + .focus-input100 {
@@ -304,7 +321,7 @@ iframe {
 }
 
 .input100:focus + .focus-input100 + .symbol-input100 {
-  color: #d2ab67;
+  color: #e45000;
   padding-left: 28px;
 }
 
@@ -332,7 +349,7 @@ iframe {
   width: 100%;
   height: 50px;
   border-radius: 25px;
-  background: #d2ab67;
+  background: #e45000;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -459,4 +476,49 @@ iframe {
     visibility: visible;
     opacity: 1;
   }
+}
+
+/*---------------------------------------------*/
+.btn-show-pass {
+  font-size: 18px;
+  color: #999999;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
+  padding-right: 20px;
+  cursor: pointer;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.btn-show-pass:hover {
+  color: #e45000;
+}
+
+.btn-show-pass.active {
+  color: #e45000;
+}
+
+#particles-js {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -9991;
+  
+  background: -webkit-linear-gradient(-135deg, #ffffff, #e7e7e7);
+  background: -o-linear-gradient(-135deg, #ffffff, #e7e7e7);
+  background: -moz-linear-gradient(-135deg, #ffffff, #e7e7e7);
+  background: linear-gradient(-135deg, #ffffff, #e7e7e7);
 }
