--- a/public/assets/pages-template/corporate/css/style.css
+++ b/public/assets/pages-template/corporate/css/style.css
@@ -812,16 +812,16 @@ body.page-header-fixed {
 	text-indent: -100000px;
 }
 .owl-buttons .owl-prev {
-    background: #fff url(../../pages/img/fa-angles.png) no-repeat 8px 8px;
+    background: #fff url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat 8px 8px;
 }
 .owl-buttons .owl-next {
-    background: #fff url(../../pages/img/fa-angles.png) no-repeat -33px 8px;
+    background: #fff url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat -33px 8px;
 }
 .owl-buttons .owl-prev:hover {
-    background: #e84d1c url(../../pages/img/fa-angles.png) no-repeat 8px -31px;
+    background: #e84d1c url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat 8px -31px;
 }
 .owl-buttons .owl-next:hover {
-    background: #e84d1c url(../../pages/img/fa-angles.png) no-repeat -33px -31px;
+    background: #e84d1c url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat -33px -31px;
 }
 
 /*  */
@@ -1003,20 +1003,20 @@ Brands
 }
 .brands .owl-buttons .owl-prev {
     left: 0;
-    background: #fff url(../../pages/img/fa-angle-brands.png) no-repeat 18px 18px;
+    background: #fff url(http://localhost:8000/assets/pages-template/pages/img/fa-angle-brands.png) no-repeat 18px 18px;
     margin-left: 0;
 }
 .brands .owl-buttons .owl-prev:hover {
-    background: #fff url(../../pages/img/fa-angle-brands.png) no-repeat 18px -217px;
+    background: #fff url(http://localhost:8000/assets/pages-template/pages/img/fa-angle-brands.png) no-repeat 18px -217px;
 }
 .brands .owl-buttons .owl-next {
     left: auto;
     right: 0;
-    background: #fff url(../../pages/img/fa-angle-brands.png) no-repeat -249px 18px;
+    background: #fff url(http://localhost:8000/assets/pages-template/pages/img/fa-angle-brands.png) no-repeat -249px 18px;
     margin-right: 0;
 }
 .brands .owl-buttons .owl-next:hover {
-    background: #fff url(../../pages/img/fa-angle-brands.png) no-repeat -249px -217px;
+    background: #fff url(http://localhost:8000/assets/pages-template/pages/img/fa-angle-brands.png) no-repeat -249px -217px;
 }
 
 /***
@@ -1049,7 +1049,7 @@ steps block and steps block elements
 	display: block;
 	width: 36px;
 	height: 71px;
-	background: url(../../pages/img/step3-angle-right.png) no-repeat 100% 50%;
+	background: url(http://localhost:8000/assets/pages-template/pages/img/step3-angle-right.png) no-repeat 100% 50%;
 	position: absolute;
 	top: 0;
 	right: 10px;
@@ -1106,24 +1106,24 @@ steps block and steps block elements
 	margin: -23px 0 23px;
 	position: relative;
 	overflow: hidden;
-	background: #72c2ff url(../../pages/img/title-bg/man.jpg) no-repeat 100% 100%;
-	min-height: 280px;
+	background: url(http://localhost:8000/assets/pages-template/pages/img/title-bg/bg_title.jpg) 0% 3% no-repeat;
+	min-height: 220px;
 	padding-top: 79px;
 	width: 100%;
 	overflow: hidden;
 }
-.title-wrapper .container-inner {
-	float: left;
+.title-wrapper .container-inner h1{
+	font-family: 'Pacifico';
 }
+
 .ecommerce .title-wrapper h1, .title-wrapper em {
 	font-family: 'Open Sans', sans-serif;
-	color: #fff;
-	font-weight: 400;
+	color: #e6400c;
+	font-weight: bolder;
 }
 .ecommerce .title-wrapper h1 {
-	font-size: 45px;
+	font-size: 55px;
 	padding: 0 9px 13px;
-	border-bottom: solid 1px rgba(255,255,255,0.6);
 	margin: 0 -9px 17px;
 }
 .title-wrapper h1 span {
@@ -2266,16 +2266,16 @@ Demo Utils
 }
 .testimonials-v1 .left-btn {
 	right: 30px;
-    background: url(../../pages/img/fa-angles.png) no-repeat 8px 8px;
+    background: url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat 8px 8px;
 }
 .testimonials-v1 .right-btn {
-    background: url(../../pages/img/fa-angles.png) no-repeat -33px 8px;
+    background: url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat -33px 8px;
 }
 .testimonials-v1 .left-btn:hover {
-    background: #e84d1c url(../../pages/img/fa-angles.png) no-repeat 8px -31px;
+    background: #e84d1c url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat 8px -31px;
 }
 .testimonials-v1 .right-btn:hover {
-    background: #e84d1c url(../../pages/img/fa-angles.png) no-repeat -33px -31px;
+    background: #e84d1c url(http://localhost:8000/assets/pages-template/pages/img/fa-angles.png) no-repeat -33px -31px;
 }
 
 /* our clients */
@@ -2982,14 +2982,14 @@ Styler Panel
   margin: 0;
 }
 .color-panel .icon-color {
-  background: #c9c9c9 url(../../pages/img/icon-color.png) center no-repeat;
+  background: #c9c9c9 url(http://localhost:8000/assets/pages-template/pages/img/icon-color.png) center no-repeat;
 }
 .color-panel .icon-color:hover {
   background-color: #3d3d3d;
 }
 .color-panel .icon-color-close {
   display: none;
-  background: #3d3d3d url(../../pages/img/icon-color-close.png) center no-repeat;
+  background: #3d3d3d url(http://localhost:8000/assets/pages-template/pages/img/icon-color-close.png) center no-repeat;
 }
 .color-panel .icon-color-close:hover {
   background-color: #222;
@@ -3080,3 +3080,7 @@ Styler Panel
 .fancybox-opened {
   z-index: 100001;
 }
+input:disabled {
+	background: none;
+}
+
