--- a/public/assets/pages-template/corporate/css/custom.css
+++ b/public/assets/pages-template/corporate/css/custom.css
@@ -15,3 +15,9 @@
     font-size: 16px;
     font-weight: bolder;
 }
+
+.img-car-list{
+    display: block;
+    max-width: 100%;
+    height: 130px;
+}
